agregando el archivo .gitignore y cambiando el tema de la presentacion, para esto se esta usando el tema de CambridgeUS, este tema pertenece a Beamer

--- a/Press.Rmd
+++ b/Press.Rmd
@@ -2,7 +2,11 @@
 title: "Titulo de la presentacion"
 author: "rr@l"
 date: "21/7/2019"
-output: beamer_presentation
+output: 
+    beamer_presentation:
+        theme: "CambridgeUS "
+        colortheme: "lily"
+        fonttheme: "structurebold"
 ---
 
 ```{r setup, include=FALSE}
