se modifico el tamanio de la presentacion, por defecto es 4:3, pero ahora se cambio a 16:9 (toda la pantalla), tener en cuenta el indentado de la linea

--- a/Press.Rmd
+++ b/Press.Rmd
@@ -7,6 +7,9 @@ output:
         theme: "CambridgeUS "
         colortheme: "lily"
         fonttheme: "structurebold"
+        # number_sections: FALSE
+# Cambiando dimension de diapo, 16:9, por defecto es 4:3
+classoption: "aspectratio=169"
 ---
 
 ```{r setup, include=FALSE}
